# siflow

./: .gitignore  LICENSE  README.md  TUTORIAL.md  pyproject.toml  requirements-colab.txt
notebooks/: _build.py  nb1_mdlm.ipynb  nb2_large_teachers.ipynb  run_0_smoke.ipynb  run_1_mdlm_data_cache.ipynb  run_2_mdlm_train.ipynb  run_3_mdlm_eval_figures.ipynb  run_4_mdlm_ablations.ipynb  run_5_dream_cache.ipynb  run_6_dream_train_eval.ipynb  run_7_gemma_cache.ipynb  run_8_gemma_train_eval.ipynb
paper/: REVISION_LOG.md  aaai2027.sty  references.bib  siflow_aaai.tex  tables_auto.tex
results/: schema.example.json
scripts/: build_cache.py  evaluate.py  make_figures.py  make_tables.py  train.py
siflow/: __init__.py  data.py  flash_compat.py  head.py  losses.py  masking.py  sampling.py  schedule.py  student.py  support.py  train.py
siflow/analysis/: __init__.py  curves.py  entropy.py  straightness.py
siflow/config/: __init__.py  default.yaml  dream.yaml  gemma.yaml  llada.yaml  mdlm.yaml
siflow/eval/: __init__.py  diversity.py  gen_ppl.py  lambada.py  mauve_eval.py  throughput.py
siflow/teacher/: __init__.py  base.py  dream.py  gemma.py  hf_dlm.py  llada.py  mdlm.py
siflow/utils/: __init__.py  ckpt.py  drive.py  ema.py  io.py  logging.py  seed.py
tests/: test_cache_roundtrip.py  test_ckpt_ema.py  test_data_dtype.py  test_flash_compat.py  test_head_params.py  test_integration.py  test_losses.py  test_nested_mask.py  test_schedule.py  test_subs.py
